# flight-tracker-tui

./: CLAUDE.md  Cargo.toml  README.md
src/: app.rs  cache.rs  error.rs  event.rs  flight.rs  history.rs  main.rs  ui.rs
src/api/: aviationstack.rs  mod.rs  opensky.rs  types.rs
